// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test suite for RequestResetEmailForm component Because snapshots 1`] = `
<div
  className="row"
>
  <div
    className="col-sm-push-2 col-sm-8 col-xs-12"
  >
    <article
      role="main"
    >
      <header
        className="page-heading page-heading-without-breadcrumb"
      >
        <h1
          className="uikit-display-5"
        >
          Reset password
        </h1>
        <span>
          Enter your email address and we'll send you a link to reset your password. Password reset links are valid for 24 hours.
        </span>
      </header>
      <form
        id="sendResetEmail"
        noValidate={undefined}
        onReset={[Function]}
        onSubmit={[Function]}
      >
        <div
          className="field"
        >
          <label
            className="question-heading"
            htmlFor="email_address"
          />
          <p
            className="hint"
            id="email_address-hint"
          >
            Enter the email address you used to register with the Marketplace
          </p>
          <input
            className=""
            disabled={false}
            id="email_address"
            maxLength={undefined}
            name="email_address"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            pattern={undefined}
            readOnly={undefined}
            type="text"
            value={undefined}
          />
        </div>
        <p>
          <input
            className="uikit-btn"
            onClick={[Function]}
            type="submit"
            value="Send reset password"
          />
        </p>
      </form>
    </article>
  </div>
</div>
`;

exports[`Test suite for ResetPasswordForm component Because snapshots 1`] = `
<div
  className="row"
>
  <div
    className="col-sm-push-2 col-sm-8 col-xs-12"
  >
    <article
      role="main"
    >
      <header
        className="page-heading page-heading-without-breadcrumb"
      >
        <h1
          className="uikit-display-5"
        >
          Reset password
        </h1>
      </header>
      <form
        id="resetPassword"
        noValidate={undefined}
        onReset={[Function]}
        onSubmit={[Function]}
      >
        <div
          className="field"
        >
          <label
            className="question-heading"
            htmlFor="password"
          >
            Password
          </label>
          <p
            className="hint"
            id="password-hint"
          >
            Your password should be at least 10 characters
          </p>
          <input
            className=""
            disabled={false}
            id="password"
            maxLength={undefined}
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            pattern={undefined}
            readOnly={undefined}
            type="password"
            value={undefined}
          />
        </div>
        <div
          className="field"
        >
          <label
            className="question-heading"
            htmlFor="confirmPassword"
          >
            Password
          </label>
          <p
            className="hint"
            id="confirmPassword-hint"
          >
            Repeat password used above
          </p>
          <input
            className=""
            disabled={false}
            id="confirmPassword"
            maxLength={undefined}
            name="confirmPassword"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            pattern={undefined}
            readOnly={undefined}
            type="password"
            value={undefined}
          />
        </div>
        <p>
          <input
            className="uikit-btn"
            onClick={[Function]}
            type="submit"
            value="Reset password"
          />
        </p>
      </form>
    </article>
  </div>
</div>
`;
